--- a/example1.html
+++ b/example1.html
@@ -4,10 +4,12 @@
  <meta charset="utf-8">
  <title>My Web Page</title>
 </head>
-<body>
- <h1>My First Website</h1>
- <h2>I hope you like it here.</h2>
- <p>This is my paragraph.</p><br>
+<body style="background-color: lavender;">
+ <h1 style="background-color: lightskyblue;">My First Website</h1>
+ <h2 style="border-style:solid; border-width:1px;">I hope you like it here.</h2>
+ <h3>I hope you like it here.</h3>
+ <h4>I hope you like it here.</h4>
+ <p style="color:midnightblue;">This is my paragraph.</p><br>
  <p>This is my another paragraph.</p>
  <b>Bold text</b>
  <i>Italic text</i>
@@ -16,6 +18,7 @@
  <sub>Subscript text</sub>
  <sup>Superscript text</sup>
  <img src="http://www.cuc.edu.cn/_upload/site/00/05/5/logo.png">
- <a href="http://www.cuc.edu.cn">This is the link to cuc's Website</a>
+ <a href="http://www.cuc.edu.cn" target="_blank">This is the link to cuc's Website</a><br>
+ <img src="campus.jpeg">
 </body>
 </html>
